Fix for issue #221 - breadcrumb text overlapping in IE8.
git-svn-id: http://ala-bie.googlecode.com/svn/trunk/bie-webapp2@4225 de2a7fd8-b20c-11de-9ad3-fd5786690477

--- a/web-app/css/AlaBsAdditions.css
+++ b/web-app/css/AlaBsAdditions.css
@@ -17,6 +17,10 @@ h4 {font-size: 1.4em;}
     padding: 0;
 }
 
+.breadcrumb > li {
+    display: inline;
+}
+
 .breadcrumb > li > .icon {
     color: #555555;
     opacity:0.6;
